Fixing social alignment

--- a/theme/twenty/static/css/style.css
+++ b/theme/twenty/static/css/style.css
@@ -1098,3 +1098,7 @@
 	background: rgb(124, 128, 129);
 	color: rgb(243, 246, 250);
 }
+
+.social {
+	box-sizing: content-box;
+}
